--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Javascript Tutoring Website",
   "main": "index.js",
   "scripts": {
-    "dev": "live-server src/index.html && npm run compile:sass",
-    "compile:sass": "node-sass src/sass/main.scss css/styles.css -w",
+    "dev": "live-server src/index.html",
+    "compile:sass": "node-sass src/sass/main.scss src/css/styles.css --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
